adding json web token

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL = mongodb+srv://Prawar:Prawar20@cluster0.90ti8.mongodb.net/shop?retryWrites=true&w=majority
 PASS_SEC = Prawar
+JWT_SEC = Prawar
